--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">100%</h3>
+                        <h3 class="profile__info-number">History</h3>
                         <p class="profile__info-description">
-                            Original <br> Human
+                            Original <br> 
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">100%</h3>
+                        <h3 class="profile__info-number">Philosophy</h3>
                         <p class="profile__info-description">
-                            Love <br> Music
+                            Love <br> 
                         </p>
                     </div>
                 </div>
 
                 <div class="profile__buttons">
                     <a download="" href="Gianell-Cv.pdf" class="button">
-                        Download MY CV Here <br> (do not download) <i class="ri-download-line"></i>
+                        File not ready <br> (do not download) <i class="ri-download-line"></i>
                     </a>
 
                     <div class="profile__buttons-small ">
