--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">History</h3>
+                        <h3 class="profile__info-number">Historic</h3>
                         <p class="profile__info-description">
                             Original <br> 
                         </p>
