--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </a>
 
                     <div class="profile__buttons-small ">
-                        <a href="https://m.me/multazam.tabrani.9" target="_blank" class="button button__small button__gray">
+                        <a href="https://api.whatsapp.com/send/?phone=6281389138630&text&type=phone_number&app_absent=0" target="_blank" class="button button__small button__gray">
                             <i class="ri-messenger-line"></i>
                         </a>
                     </div>
