--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="https://www.facebook.com/multazam.tabrani.9" class="profil__social-link">
                             <i class="ri-facebook-line"></i>
                         </a>
-                        <a href="https://www.instagram.com/abdiltyd/" class="profil__social-link">
+                        <a href="https://instagram.com/abdilllt?igshid=MzNlNGNkZWQ4Mg==" class="profil__social-link">
                             <i class="ri-instagram-line"></i>    
                         </a>
                         <a href="https://www.linkedin.com/in/abdil-tabrani-263264227" class="profil__social-link">
