--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                         <i class="ri-checkbox-circle-line"></i>
 
                                         <div>
-                                            <h3 class="skills__name">Garden</h3>
+                                            <h3 class="skills__name">Physic</h3>
                                             <span class="skills__level"></span>
                                         </div>
                                     </div>
@@ -246,7 +246,7 @@
                                         <i class="ri-checkbox-circle-line"></i>
 
                                         <div>
-                                            <h3 class="skills__name">Singing</h3>
+                                            <h3 class="skills__name">Astronomy</h3>
                                             <span class="skills__level"></span>
                                         </div>
                                     </div>
