--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="profile__buttons">
-                    <a download="" href="Gianell-Cv.pdf" class="button">
+                    <a download="" href="cvat.pdf" class="button">
                         File not ready <br> (do not download) <i class="ri-download-line"></i>
                     </a>
 
