--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 </div>
 
                 <div class="profile__buttons">
-                    <a download="" href="cvat.pdf" class="button">
-                        File not ready <br> (do not download) <i class="ri-download-line"></i>
+                    <a download="" href="cvat.pdf" class="button"> FILE READY
+                        <br><i class="ri-download-line"></i>
                     </a>
 
                     <div class="profile__buttons-small ">
