--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <div class="profile__buttons">
                     <a download="" href="cvat.pdf" class="button"> FILE READY
-                        <br><i class="ri-download-line"></i>
+                        <br> Click to download <i class="ri-download-line"></i>
                     </a>
 
                     <div class="profile__buttons-small ">
