--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 </div>
 
                 <div class="profile__buttons">
-                    <a download="" href="cvat.pdf" class="button"> FILE READY
-                        <br> Click to download <i class="ri-download-line"></i>
+                    <a download="" href="cvat.pdf" class="button"> Download CV
+                        <br>  <i class="ri-download-line"></i>
                     </a>
 
                     <div class="profile__buttons-small ">
