--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="profile__buttons">
-                    <a download="" href="cvat.pdf" class="button"> Download CV
+                    <a download="" href="" class="button"> Download CV (N)
                         <br>  <i class="ri-download-line"></i>
                     </a>
 
