--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h3 class="profile__profession">Student-Indonesia</h3>
 
                     <ul class="profile__social">
-                        <a href="https://instagram.com/abdilllt?igshid=MzNlNGNkZWQ4Mg==" class="profil__social-link">
+                        <a href="https://instagram.com/abdillllt?igshid=MzNlNGNkZWQ4Mg==" class="profil__social-link">
                             <i class="ri-instagram-fill"></i>    
                         </a>
                         <a href="https://www.linkedin.com/in/abdil-tabrani-263264227" class="profil__social-link">
